[gd_scene load_steps=3 format=3 uid="uid://b2w8lsas4gtbj"]

[ext_resource type="Script" path="res://Scripts/Title.gd" id="1_5abma"]
[ext_resource type="Texture2D" uid="uid://dxbry6dgbj6ir" path="res://Assets/Sprites/WoodenBackground2.jpg" id="2_cbga5"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5abma")

[node name="WoodenBAckground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cbga5")
expand_mode = 1
flip_v = true

[node name="TitleText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.243
anchor_top = 0.333
anchor_right = 0.764
anchor_bottom = 0.438
offset_left = -7.936
offset_top = 0.216003
offset_right = -0.128052
offset_bottom = 0.175995
theme_override_colors/default_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_constants/line_separation = -1
theme_override_font_sizes/normal_font_size = 44
bbcode_enabled = true
text = "[center]Champion's  Crokinole[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 1
shortcut_keys_enabled = false

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayGameButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431
anchor_top = 0.617
anchor_right = 0.583
anchor_bottom = 0.699
offset_left = -0.512024
offset_top = 0.18396
offset_right = 0.383972
offset_bottom = 0.0479736
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
text = "Play Game"

[node name="HelpButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431
anchor_top = 0.716
anchor_right = 0.583
anchor_bottom = 0.79
offset_left = -0.512024
offset_top = 0.0319824
offset_right = 0.383972
offset_bottom = 0.0799866
grow_horizontal = 2
grow_vertical = 2
text = "Rules"

[node name="CreditsButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431
anchor_top = 0.802
anchor_right = 0.583
anchor_bottom = 0.87
offset_left = -0.512024
offset_top = 0.303955
offset_right = 0.383972
offset_bottom = 0.239929
grow_horizontal = 2
grow_vertical = 2
text = "Credits"

[node name="ExitGameButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431
anchor_top = 0.889
anchor_right = 0.583
anchor_bottom = 0.957
offset_left = -0.512024
offset_top = -0.0720215
offset_right = 0.383972
offset_bottom = -0.135986
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="exitButton" type="Button" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.435
anchor_top = 0.887
anchor_right = 0.563
anchor_bottom = 0.965
offset_left = 602.88
offset_top = -574.776
offset_right = 503.424
offset_bottom = -585.32
grow_horizontal = 2
grow_vertical = 2
text = "X"

[node name="Credit" type="RichTextLabel" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.444
anchor_right = 1.0
anchor_bottom = 0.574
offset_top = 0.287964
offset_bottom = 0.0480042
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.996078, 0.996078, 0.996078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Brought to you courtesy of Josephine Thompson, Noki Heroux, and Wade Canavan[/center]"

[connection signal="pressed" from="Buttons/PlayGameButton" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="Buttons/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Buttons/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="Credits/exitButton" to="." method="_on_exit_button_pressed"]
